Add carpenter villager profession

--- a/src/main/resources/assets/overhaul/lang/en_us.json
+++ b/src/main/resources/assets/overhaul/lang/en_us.json
@@ -3,6 +3,7 @@
   "container.saw": "Saw",
   "effect.overhaul.gliding": "Gliding",
   "effect.overhaul.stickiness": "Stickiness",
+  "entity.minecraft.villager.carpenter": "Carpenter",
   "item.minecraft.potion.effect.gliding": "Potion of Gliding",
   "item.minecraft.potion.effect.stickiness": "Potion of Stickiness",
   "item.minecraft.splash_potion.effect.gliding": "Splash Potion of Gliding",
