--- a/src/main/resources/assets/overhaul/lang/en_us.json
+++ b/src/main/resources/assets/overhaul/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.overhaul.hourglass": "Hourglass",
   "block.overhaul.saw": "Saw",
   "container.saw": "Saw",
   "effect.overhaul.gliding": "Gliding",
